# cassa-paperone-rotondi

./: .gitmodules  CMakeLists.txt  README.md  prj.conf
boards/paperone/: Kconfig.paperone  board.cmake  board.yml  paperone.dts  paperone.yaml  paperone_defconfig
boards/paperone/support/: openocd.cfg
lib/cctalk/src/: cctalk.c  cctalk.h
lib/mdb/src/: mdb.c  mdb.h
lib/mdb/src/devices/: cashless.c  cashless.h
src/: main.c
src/adapters/: modbus_server.c  modbus_server.h
src/bsp/: digital_coin_reader.c  digital_coin_reader.h  digital_reader.c  digital_reader.h  heartbit.c  heartbit.h  rs232_client.c  rs232_client.h  uart_cctalk.c  uart_cctalk.h  uart_common.c  uart_common.h  uart_mdb.c  uart_mdb.h
src/bsp/mfrc522/: driver.c  driver.h  interface.c  interface.h  mfrc522.c  mfrc522.h
src/controller/: controller.c
src/model/: model.c  model.h
src/services/: timestamp.h
